vitrail-pg-macros/tests/ui/fail/duplicate_model.stderr
error: duplicate model `user`
  --> tests/ui/fail/duplicate_model.rs:10:11
   |
10 |     model user {
   |           ^^^^

error: first declaration of this model
 --> tests/ui/fail/duplicate_model.rs:6:11
  |
6 |     model user {
  |           ^^^^
